VPZH-017: persist customer profile
